...

                    contentView
                        .navigationDestination(isPresented: $isHomeView) {
                            HomeView()
                        }
                        .navigationDestination(isPresented: $showAgreementsView) {
                            AgreementView()
                        }
                }

                navigationBar
            }
        }
...
